@@ -6,7 +6,8 @@ V6.7: (under development)
   * Fixed issue #712: Strange behaviour of AutoFitColumns
   * Fixed issue #718: Shift + Rght-Click should not extend selection
   * Fixed issue #706: Integer overflow in DetermineScrollDirections when timeGetTime wraps
-  * Fixed issue #407: TVirtualDrawTree.InvalidateNode does not clear vsHeightMeasured      
+  * Fixed issue #407: TVirtualDrawTree.InvalidateNode does not clear vsHeightMeasured
+  * Enhancement #669: Create sample project for C++ Builder
   
 V6.6 (04 Apr 2017)
   * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
